# CiderPress

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  pytest_mpi.ini  requirements.txt  search.html  searchindex.js  setup.py
.github/: full_env.yml  nocomp_env.yml
.github/workflows/: apt_deps.sh  basic_tests.yml  build_docs.yml  cmake_script.sh  full_env.yml  get_base.py  gpaw_blas_siteconfig.py  gpaw_siteconfig.py  gpaw_tests.yml  lint.yaml  load_conda.sh  mm_install.sh  mm_install_mpi.sh  mm_install_torch.sh  mpi_apt_deps.sh  mpi_tests.yml  mpi_testsv2.yml  nocomp_env.yml  nodef_condarc  nompi_siteconfig.py  publish.yml  run_core_ci.sh  run_gpaw_ci.sh  run_gpaw_mpi_ci.sh  run_gpaw_tests.sh  run_local_pip.sh  run_mpi_tests.sh  run_tests.sh  setup_gpaw.sh  setup_gpaw_nompi.sh  source_os.sh  tests.yml
.github/workflows/ci_linux/: mpi_apt_deps.sh
.github/workflows/ci_macos/: apt_deps.sh  mpi_apt_deps.sh
_sources/: index.rst.txt
_sources/c_extensions/: c_extensions.rst.txt  pwutil.rst.txt
_sources/ciderpress/dft/: dft.rst.txt  feat_normalizer.rst.txt  plans.rst.txt  settings.rst.txt
_sources/ciderpress/gpaw/: calculator.rst.txt  gpaw.rst.txt
_sources/ciderpress/models/: kernel_tools.rst.txt  kernels.rst.txt  models.rst.txt
_sources/ciderpress/pyscf/: analyzers.rst.txt  dft.rst.txt  pyscf.rst.txt
_sources/features/: features.rst.txt  nldf.rst.txt  sl.rst.txt
_sources/installation/: installation.rst.txt
_sources/theory/: nldf_numerical.rst.txt  theory.rst.txt  uniform_scaling.rst.txt
c_extensions/: c_extensions.html  pwutil.html
ciderpress/: analyzers.py  density.py
ciderpress/data/: __init__.py  expnt_maxs.npy  expnt_mins.npy
ciderpress/dft/: baselines.py  cider_kernel.py  debug_numint.py  density_util.py  dft.html  feat_normalizer.html  feat_normalizer.py  grids_indexer.py  lcao_convolutions.py  lcao_interpolation.py  lcao_nldf_generator.py  model_utils.py  plans.html  plans.py  pwutil.py  settings.html  settings.py  sph_harm_coeff.py  sphere_util.py  transform_data.html  transform_data.py  xc_evaluator.html  xc_evaluator.py  xc_evaluator2.py  xc_models.py  xc_torch.py
ciderpress/dft/tests/: debug_normalizers.py  test_baselines.py  test_convolutions.py  test_feat_normalizer.py  test_grids_indexer.py  test_interpolation.py  test_plans.py  test_sph_harm_coeff.py  test_transform_data.py  test_ueg.py
ciderpress/gpaw/: analysis.py  atom_analysis_utils.py  atom_descriptor_utils.py  atom_utils.py  atom_utils2.py  calculator.html  calculator.py  cider_fft.py  cider_kernel.py  cider_paw.py  cider_sl.py  config.py  descriptors.py  etb_util.py  fast_atom_descriptor_utils.py  fast_atom_utils.py  fast_descriptors.py  fast_fft.py  fast_paw.py  fit_paw_gauss_pot.py  gpaw.html  gpaw_grids.py  gpaw_plot.py  interp_paw.py  mp_cider.py  nldf_interface.py  paw_cider_kernel.py  xc_tools.py
ciderpress/gpaw/tests/: __init__.py  test_basic_calc.py  test_descriptors.py  test_fast.py  test_fast_force.py  test_fast_stress.py  test_fe_force.py  test_fe_stress.py  test_force.py  test_gpaw_grids.py  test_nldf_interface.py  test_pp_force.py  test_read_write.py  test_si_force.py  test_si_stress.py  test_sph_harm.py
ciderpress/lib/: CMakeLists.txt  __init__.py  fft_plan.py  load.py  mpi_fft_plan.py
ciderpress/lib/fft_wrapper/: CMakeLists.txt  cider_fft.c  cider_fft.h  cider_mpi_fft.c  cider_mpi_fft.h  config.h.in
ciderpress/lib/gpaw_utils_src/: fast_sph_harm.f90  gpaw_utils.f90
ciderpress/lib/mod_cider/: CMakeLists.txt  cider_coefs.c  cider_grids.c  conv_interpolation.c  conv_interpolation.h  convolutions.c  convolutions.h  debug_numint.c  fast_sdmx.c  fast_sdmx.h  fblas.h  frac_lapl.c  model_utils.c  pbc_tools.c  pyscf_gto.h  sph_harm.c  sph_harm.h  spline.c  spline.h
ciderpress/lib/numint_cider/: CMakeLists.txt  nr_numint.c
ciderpress/lib/pw_utils/: CMakeLists.txt  grid_util.c  nldf_fft.c
ciderpress/lib/pwutil/: CMakeLists.txt  config.h  config.h.in  gpaw_interface.c  gpaw_interface.h  grid_util.c  nldf_fft.c  nldf_fft.h  nldf_fft_core.c  nldf_fft_core.h  nldf_fft_mpi.c  nldf_fft_mpi.h  nldf_fft_serial.c  nldf_fft_serial.h
ciderpress/lib/sbt/: CMakeLists.txt  sbt.c  sbt.h
ciderpress/lib/tests/: tests_fft_plan.py  tests_mpi_fft_plan.py
ciderpress/lib/xc_utils/: CMakeLists.txt  libxc_baselines.c
ciderpress/models/: baselines.py  compute_mol_cov.py  dft_kernel.html  dft_kernel.py  gp.py  kernel_tools.html  kernels.html  kernels.py  models.html  train.html  train.py
ciderpress/models/kernel_plans/: arbf_exchange.py  kernel_tools.py  map_tools.py  plan_template.py  settings_example.yaml
ciderpress/models/tests/: test_gp.py  test_kernels.py
ciderpress/pyscf/: analyzers.html  analyzers.py  debug_numint.py  descriptors.html  descriptors.py  dft.html  dft.py  frac_lapl.py  gen_cider_grid.py  nldf_convolutions.py  numint.py  pyscf.html  rks_grad.py  sdmx.py  sdmx_slow.py  uks_grad.py
ciderpress/pyscf/pbc/: __init__.py  dft.html  dft.py  numint.py  sdmx_fft.py  util.py
ciderpress/pyscf/tests/: old_test_nldf.py  test_fast_sdmx.py  test_frac_lapl.py  test_functionals.py  test_nldf.py  test_rks_grad.py  test_sdmx.py  test_sdmx_slow.py  test_sl.py  test_uks_grad.py  test_xedsadm.py  utils_for_test.py
docs/: Doxyfile.in  conf.py  index.rst
docs/_templates/: layout.html
docs/ciderpress/dft/: dft.rst  transform_data.rst  xc_evaluator.rst
docs/ciderpress/gpaw/: gpaw.rst
docs/features/: nldf.rst  nlof.rst  sdmx.rst
docs/installation/: installation.rst
docs/refs/: cider_refs.bib  refs.bib
docs/theory/: gp.rst  nldf_numerical.rst  theory.rst  uniform_scaling.rst
examples/gpaw/: pp_calc.py  simple_calc.py
examples/pyscf/: compute_ae.py  simple_calc.py  simple_sdmx.py
features/: features.html  nldf.html  nlof.html  sdmx.html  sl.html
installation/: installation.html
scripts/: download_functionals.py  generate_etb.py
theory/: gp.html  nldf_numerical.html  theory.html  uniform_scaling.html
(+10 files in other folders)
